--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.816.0",
     "@pinecone-database/pinecone": "^6.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
